your-spotify/network-policy-spotify-allow-egress-ferretdb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spotify-allow-egress-ferretdb
  namespace: spotify
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: spotify
      ports:
        - protocol: TCP
          port: 27017
